// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentsModule Should render file lists correctly 1`] = `
<DocumentsModule
  clients={
    Object {
      "100000": Object {
        "clientName": "Ozzy Perez",
        "id": "100000",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
      "100001": Object {
        "clientName": "Alondra Perez",
        "id": "100001",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
    }
  }
  getDocuments={[Function]}
  getProjects={[Function]}
>
  <Module
    buttonActions={
      Array [
        [Function],
      ]
    }
    displayType="grid-view"
    title="Documents"
  >
    <div
      className="Module"
      id="DocumentsModule"
    >
      <div
        id="toolbar"
      >
        <h1>
          Documents
        </h1>
        <div
          className="toolbarButtons"
        >
          <button
            className="toggleDisplayType toolbar-button button-grid-view"
            key="0"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        id="breadcrumb"
      >
        <div
          id="breadcrumb-slider"
        >
          <div
            onClick={[Function]}
          >
            Home
          </div>
          <div
            onClick={[Function]}
          >
            Alondra Perez
          </div>
          <div
            onClick={[Function]}
          >
            2017 Form 1040
          </div>
        </div>
      </div>
      <ul
        className="grid-view"
      >
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "category": "Workpapers",
              "year": 2017,
            }
          }
          fileType="PDF"
          key="AAAAAAAAAAA"
          name="file2"
          view="grid-view"
        >
          <li
            className="PDF"
            onDoubleClick={[Function]}
            title="file2"
          >
            <p>
              file2
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
      </ul>
    </div>
  </Module>
</DocumentsModule>
`;

exports[`DocumentsModule Should render folder lists correctly 1`] = `
<DocumentsModule
  clients={
    Object {
      "100000": Object {
        "clientName": "Ozzy Perez",
        "id": "100000",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
      "100001": Object {
        "clientName": "Alondra Perez",
        "id": "100001",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
    }
  }
  getDocuments={[Function]}
  getProjects={[Function]}
>
  <Module
    buttonActions={
      Array [
        [Function],
      ]
    }
    displayType="grid-view"
    title="Documents"
  >
    <div
      className="Module"
      id="DocumentsModule"
    >
      <div
        id="toolbar"
      >
        <h1>
          Documents
        </h1>
        <div
          className="toolbarButtons"
        >
          <button
            className="toggleDisplayType toolbar-button button-grid-view"
            key="0"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        id="breadcrumb"
      >
        <div
          id="breadcrumb-slider"
        />
      </div>
      <ul
        className="grid-view"
      >
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "id": "100001",
            }
          }
          key="100001"
          name="Alondra Perez"
          view="grid-view"
        >
          <li
            onDoubleClick={[Function]}
            title="Alondra Perez"
          >
            <p>
              Alondra Perez
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "id": "100000",
            }
          }
          key="100000"
          name="Ozzy Perez"
          view="grid-view"
        >
          <li
            onDoubleClick={[Function]}
            title="Ozzy Perez"
          >
            <p>
              Ozzy Perez
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
      </ul>
    </div>
  </Module>
</DocumentsModule>
`;
